# zino-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
locales/: TODO.yml  app.yml
src/: i18n.rs  lib.rs  main.rs  utils.rs
src/core/: mod.rs  shell.rs
src/new/: args.rs  crate_version.rs  mod.rs  parse_file.rs
src/new/template/: Cargo.hbs
src/new/template/config/: config.prod.hbs
src/new/template/src/: main.hbs
src/new/template/src/controller/: mod.rs
src/new/template/src/router/: mod.hbs
src/serve/: args.rs  mod.rs
template/: Cargo.hbs
template/config/: config.dev.hbs  config.prod.hbs
template/src/: main.hbs
template/src/controller/: hello.rs
template/src/middleware/: access.hbs  mod.hbs
template/src/model/: mod.rs  user.rs
template/src/router/: mod.hbs
template/src/view/: mod.rs
